--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
     <div id="ai-camera" class="content-container">
         <div style="width: 100%; height: 75vh; border-radius: 20px; overflow: hidden; border: 3px solid var(--dark-green); box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
-            <iframe src="https://itnurseswdcph-collab.github.io/AICounter/" style="width:100%; height:100%; border:none;" allow="camera; microphone"></iframe>
+            <iframe src="ai_cam.html" style="width:100%; height:100%; border:none;" allow="camera; microphone"></iframe>
         </div>
         <p style="text-align: center; color: #777; margin-top: 10px;">
             <i class="fa-solid fa-circle-info"></i> หากกล้องไม่แสดงผล กรุณาตรวจสอบสิทธิ์การเข้าถึงกล้องบนอุปกรณ์
@@ -495,3 +495,4 @@
     </script>
 </body>
 </html>
+
