--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
     </button>
     <button class="nav-btn" onclick="window.open('lucky_game.html', '_blank')">
         <i class="fa-solid fa-gift"></i> ลุ้นรางวัล Big Win
+    <button class="nav-btn" onclick="window.open('hero_scan.html', '_blank')">
+        <i class="fa-solid fa-user-astronaut"></i> Digital Hero Scan
     </button>
 </nav>
 
@@ -498,5 +500,6 @@
     </script>
 </body>
 </html>
+
 
 
