--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                 </div>
                 
                 <div class="col-lg-4 col-md-12 mb-3 mb-lg-0">
-                    <h2 class="header-title">EVENT QUICK BIG WIN หมอพร้อม SUPER APP </h2>
-                    <p class="header-subtitle">บูธกิจกรรมรณรงค์และรับบริจาคอวัยวะ โรงพยาบาลสมเด็จพระยุพราชสว่างแดนดิน 24 ธันวาคม 2568</p>
+                    <h2 class="header-title">EVENT QUICK BIG WIN </h2>
+                    <p class="header-subtitle">บูธกิจกรรมรณรงค์และรับบริจาคอวัยวะ รพร.สว่างแดนดิน 24 ธันวาคม 2568</p>
                 </div>
 
                 <div class="col-lg-4 col-md-12 text-center text-lg-end">
@@ -389,3 +389,4 @@
     </script>
 </body>
 </html>
+
